tests/semantic/invalid/59_t_method_return_mismatch.hulk
class Parent() {
    greet() => "hello";
}
class Child() is Parent() {
    greet() => 1;
}
print(0);
